<?xml version="1.0"?>
<package>
  <name>spike_encoder</name>
  <version>0.0.1</version>
  <description>The spike_encoder package</description>
  <maintainer email="j.j.g.dupeyroux@tudelft.nl">Julien Dupeyroux</maintainer>
  <license>TU Delft</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nodelet</run_depend>

  <export>
    <nodelet plugin="${prefix}/spike_encoder_nodelet.xml"/>
  </export>
</package>
